--- a/src/main/webapp/longop-busy.zul
+++ b/src/main/webapp/longop-busy.zul
@@ -2,7 +2,7 @@
     xmlns="http://www.zkoss.org/2005/zul"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-    <div apply="org.zkoss.bind.BindComposer" viewModel="@id('vm') @init('zk.example.longoperations.example.BusyLongOperationViewModel')">
+    <div viewModel="@id('vm') @init('zk.example.longoperations.example.BusyLongOperationViewModel')">
         <button onClick="@command('startLongOperation')" label="start"/>
         <grid model="@load(vm.resultModel)" height="300px"/>
     </div>
