--- a/src/main/webapp/longop-cancellable.zul
+++ b/src/main/webapp/longop-cancellable.zul
@@ -2,7 +2,7 @@
     xmlns="http://www.zkoss.org/2005/zul"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-    <div apply="org.zkoss.bind.BindComposer"
+    <div
          viewModel="@id('vm') @init('zk.example.longoperations.example.CancellableLongOperationViewModel')">
         <button onClick="@command('startLongOperation')" label="start" disabled="@load(vm.running)" autodisable="self"/>
         <button onClick="@command('cancelOperation')" iconSclass="z-icon-times" visible="@load(vm.running)"/>
