--- a/src/main/webapp/longop-separate.zul
+++ b/src/main/webapp/longop-separate.zul
@@ -2,7 +2,7 @@
     xmlns="http://www.zkoss.org/2005/zul"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-    <div apply="org.zkoss.bind.BindComposer" 
+    <div
     	 viewModel="@id('vm') @init('zk.example.longoperations.example.DataFilterLongOperationViewModel')">
         Filter Parameter (determines the duration of the operation): <intbox value="@bind(vm.filterParameter)"/>
         <button onClick="@command('startLongOperation')" label="start"/>
