--- a/src/main/webapp/longop-updating-result.zul
+++ b/src/main/webapp/longop-updating-result.zul
@@ -2,7 +2,7 @@
     xmlns="http://www.zkoss.org/2005/zul"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
 
-    <div apply="org.zkoss.bind.BindComposer" viewModel="@id('vm') @init('zk.example.longoperations.example.UpdatingResultLongOperationViewModel')">
+    <div viewModel="@id('vm') @init('zk.example.longoperations.example.UpdatingResultLongOperationViewModel')">
         <button onClick="@command('startLongOperation')" label="start" disabled="@load(vm.status ne 'idle')" autodisable="self"/>
         <label value="@load(vm.status)"/>
         <grid model="@load(vm.resultModel)" height="300px"/>
